적이 플레이어로 이동하는 것까지 구현

--- a/LabProject04-5/LabProject04-5.vcxproj.filters
+++ b/LabProject04-5/LabProject04-5.vcxproj.filters
@@ -27,7 +27,7 @@
     <ClInclude Include="Resource.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="LabProject04-5.h">
+    <ClInclude Include="3DGPHomework2.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Camera.h">
@@ -59,7 +59,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="LabProject04-5.cpp">
+    <ClCompile Include="3DGPHomework2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Camera.cpp">
