--- a/LabProject04-5/LabProject04-5.vcxproj
+++ b/LabProject04-5/LabProject04-5.vcxproj
@@ -140,7 +140,7 @@
   <ItemGroup>
     <ClInclude Include="Camera.h" />
     <ClInclude Include="GameFramework.h" />
-    <ClInclude Include="LabProject04-5.h" />
+    <ClInclude Include="3DGPHomework2.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Player.h" />
@@ -154,7 +154,7 @@
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="GameFramework.cpp" />
-    <ClCompile Include="LabProject04-5.cpp" />
+    <ClCompile Include="3DGPHomework2.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="Player.cpp" />
